# python-tasks

./: main.py  pyproject.toml
.github/workflows/: ci.yml
src/files/: text1.txt
src/tasks/task0/: main.py
src/tasks/task1/: main.py
src/tests/: test_task0.py  test_task1.py
