[project]
name = "base-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/tests"]
python_files = ['test_*.py', '*_test.py']
python_functions = 'test_*'
addopts = [
  "-vv",				        # подробный вывод хода теста
  "--import-mode=importlib"  	# меньше проблем с импортами
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
