[project]
name = "base-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/tests"]
python_files = ['test_*.py', '*_test.py']
python_functions = 'test_*'
addopts = [
  "-vv",				        # подробный вывод хода теста
  "--import-mode=importlib"  	# меньше проблем с импортами
]

[tool.ruff]
# Включаем основные правила: ошибки, стилистические проблемы, импорты и т. д.
select = ["E", "F", "I", "N", "UP", "B", "A"]
# Игнорируем правило длины строки (если не нужно ограничивать до 88/100 символов)
ignore = ["E501"]
# Целевая версия Python
target-version = "py314"
# Автоматическое исправление для поддерживаемых правил
fixable = ["ALL"]
# Папки для проверки
src = ["src", "tests"]

[tool.ruff.isort]
# Сортировка импортов для вашего пакета
known-first-party = ["my_project"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
